#
# some news ... see also TODO for hints
#


2017-10-14 -> add some minor steps towards joystick fab

2017-10-11 -> add next steps towards joystick fab
	   -> fix missing free of joystick array

2017-10-10 -> add first steps for something like joystick fab (similiar to object fab)

2017-10-09 -> add skeleton for object_fab_xml.c which should provide the same parts
	      via libxml (and xml based config-file) like object_fab.c (uses libconfig)

2017-10-08 -> do some renaming for more consistense function names
	   -> do some cleanups and locate all functions using libconfig to object_fab

2017-10-05 -> add some new artwork
	   -> add first multiple joystick handling to object_fab example
	   -> add skelton for joystick configuration via config file

2017-10-04 -> add some new artwork
	   -> let object-fab demo use the new artwork

2017-10-03 -> some minor updates/adds regarding textures and co
	   -> add next steps to a complete data driven object generation
	   -> finalize objcet_fab example

2017-09-29 -> some fix texture handling in dynamic_config example
	   -> add first steps to a complete data driven object generation

2017-09-28 -> add skeleton of object_fab example

2017-09-27 -> some fixes for player handling in dynamic_config example
	   -> mv config stuff to helper

2017-09-24 -> add game_obj_func_t which holds all functions
	   -> make flying_astronaut_2 and collision use it
	   -> add first stuff for the config handling (data driven design)
	   -> add skeleton and first parts for dynamic_config (flying astrount data driven)
	   -> add new_velo to game_obj_t
	   -> add libconfig for configuration file handling

2017-09-22 -> fix collision_object function

2017-09-20 -> use new game_obj_t and game_obj_data_t in all examples
	   -> add functions for collision handling (lib and two example's)

2017-09-19 -> add usage.md to describe the general usage of the library/examples
	   -> some first changes regarding object fab
