@@ -1,5 +1,5 @@
 #
-# object_fab -> example for a valid configuration
+# joystick_fab -> example for a valid configuration
 #
 # BSD 2-Clause
 # (c) 2017, thorsten.johannvorderbrueggen@t-online.de
@@ -21,12 +21,12 @@ config:
 	  joysticks = (
 	  	{
 			name = "joystick_1";
-			player = "player_1";
-			step = 1;
+			player = "player_2";
+			step = 5;
 		},
 		{
 			name = "joystick_2";
-			player = "player_2";
+			player = "player_1";
 			step = 1;
 		}
 	  );
