@@ -1,0 +1,69 @@
+#
+# simple_tennis
+#
+# BSD 2-Clause
+# (c) 2017, thorsten.johannvorderbrueggen@t-online.de
+#
+
+# somthing like a simple version check
+name = "simple_tennis";
+
+config:
+{
+	  window:
+	  {
+		title = "simple tennis clone";
+		size = { w = 1280; h = 720 };
+
+		background = { r = 10; g = 10; b = 10; a = 255 };
+	  };
+
+	  joysticks = (
+	  	{
+			name = "joystick_1";
+			player = "player_1";
+			step = 2;
+		},
+		{
+			name = "joystick_2";
+			player = "player_2";
+			step = 2;
+		}
+	  );
+
+	  textures = (
+		{
+			name = "player";
+			file = "astronaut_front.png";
+		},
+		{
+			name = "ball";
+			file = "enemie_simple.png";
+		}
+	  );
+
+	  players = (
+	  	{
+			name = "player_1";
+			texture = "player";
+			pos_x = 100;
+			pos_y = 100;
+		},
+		{
+			name = "player_2";
+			texture = "player";
+			pos_x = 1180;
+			pos_y = 100;
+		}
+	  );
+
+	  objects = (
+		{
+			name = "fixed_1";
+			texture = "ball";
+			pos_x = 100;
+			pos_y = 300;
+		}
+	  );
+
+}
